[package]
name = "vivaldi-nc"
version = "0.6.4"
edition = "2021"
authors = ["Stephen Waits <steve@waits.net>"]
description = "Vivaldi network coordinates for fast, distributed latency estimates in multinode networks, with a clean and simple interface."
license = "MIT"
keywords = ["vivaldi", "network", "coordinates", "distributed", "p2p"]
categories = ["algorithms", "network-programming"]
documentation = "https://docs.rs/vivaldi-nc/"
readme = "README.md"
homepage = "https://sr.ht/~swaits/vivaldi-nc/"
repository = "https://git.sr.ht/~swaits/vivaldi-nc"
exclude = ["examples/*"]
rust-version = "1.60"

[features]
default = []
f32 = []

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "million-updates"
harness = false

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.4.0"
cargo-husky = { version = "1.5.0", features = [
	"run-for-all",
	"precommit-hook",
	"run-cargo-test",
	"run-cargo-check",
	"run-cargo-clippy",
	"run-cargo-fmt",
] }
proptest = "1.1.0"
serde_json = "1.0.93"

[dependencies]
array-init = "2.1.0"
cfg-if = "1.0.0"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_with = "2.2.0"
