[package]
name = "vivaldi-nc"
version = "0.6.12"
edition = "2021"
authors = ["Stephen Waits <steve@waits.net>"]
description = "Vivaldi network coordinates for fast, distributed latency estimates in multinode networks, with a clean and simple interface."
license = "MIT"
keywords = ["vivaldi", "network", "coordinates", "distributed", "p2p"]
categories = ["algorithms", "network-programming"]
documentation = "https://docs.rs/vivaldi-nc/"
readme = "README.md"
homepage = "https://github.com/swaits/vivaldi-nc"
repository = "https://github.com/swaits/vivaldi-nc.git"
exclude = ["examples/*"]
rust-version = "1.65"

[features]
default = []
f32 = []

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "million-updates"
harness = false

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.5.1"
cargo-husky = { version = "1.5.0", features = [
  "run-for-all",
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
] }
proptest = "1.4.0"
serde_json = "1.0.114"

[dependencies]
array-init = "2.1.0"
cfg-if = "1.0.0"
num-traits = "0.2.18"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_with = "3.6.1"
